--- a/gallery.html
+++ b/gallery.html
@@ -10,34 +10,32 @@
 <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 <title>Classical Classes</title>
 </head>
-<body>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/lux/bootstrap.min.css" integrity="sha384-smnSwzHqW1zKbeuSMsAM/fMQpkk7HY11LuHiwT8snL/W2QBoZtVCT4H5x1CEcJCs" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.0/lux/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-<title>Classical Classes</title>
-</head>
-<body>
-<nav class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul>
-  <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="gallery.html">Gallery</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">About</a>
-    </li>
-    </ul>
-</nav>
 
+<nav class="nav-tabs bg-lux justify-content-center">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<h1 class="heading-lux"> Classical Classes</h1>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"  aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Gallery</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">FAQ</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+  <input class="form-control mr-sm-2" type="name" placeholder="Name and Surname" aria-label="display-lg-md">
+      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">sign in!</button>
+    </form>
+  </div>
+</nav>
+</nav>
 
 
 
@@ -48,9 +46,6 @@
     Would You like to Sing like they sing on the Stage?
 
 
-
-<!-------->
-<!----------------  >
 <p class="lead"
 >All human passions are represented in Opera
  
@@ -70,7 +65,7 @@ Opera performed live is a uniquely thrilling experience -it is hugely powerful a
 
 
 
-    <div class="container">
+    <div class="container inline-flex">
 <img src="assets/images/Everybody's welcome.jpg"class="img-fluid" alt="responsive image">
        
 <img src="assets/images/Mery.png"class="img-fluid" alt="responsive image">
