today needed to go..and i dont have it..shame
Signed-off-by: HanaLevak <hanna.levak@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.0/lux/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-	<link rel="stylesheet" href="MilestoneProject1/assets/images" type="media">
+	<link rel="stylesheet" href="MilestoneProject1/assets/image" type="media">
 	<title>Classical Classes</title>
 </head>
-<!----------nav ok--------->
+<body id="container fluid">
 <nav class="nav-tabs bg-lux justify-content-left">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
 <h1 class="heading-lux"> Classical Classes</h1>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"  aria-label="Toggle navigation">
+  <button class="navbar-toggler-color-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"  aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<div class="collapse navbar-collapse" id="navnavbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -33,67 +33,139 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
   <input class="form-control mr-sm-2" type="name" placeholder="Name and Surname" aria-label="display-lg-md">
-      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">SIGN IN HERE!</button>
+      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">SIGN IN HERE!</button>
     </form>
-  </div>
-</nav>
-<!------------/nav------------>
-</nav>
-<body>
-<section id="container-even">
-<div class="d-ml-flex sm-md-lg-expand flex-mr-equal w-100 my-md-3 pl-md-3">
-<img src="assets/images/Everybody's welcome.jpg" alt="centered">
 </div>
-<div class="bg-black text-white ml-md-3 pt-3 px-3 pt-md-5 px-md-5 context-flex">
-<p class="lead">....LOVE . . TRAGEDY ... LAUGHT .. . <br>
-    All human passions are represented in Opera</p>
-    <h2 class="display-5 lux"> Classical opera singing classes & piano lessons!  </h2>
-</div>
-  <div class="d-md-flex bg-dark flex-md-equal w-100 my-md-3 pl-md-3">
-  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-  <img src="assets/images/orchestra-bg-ready.png" alt="responsive">
-<p class="lead">Would You like to Sing like they sing on the Stage?<br>
-    I can Help you!</p></div>
-      <p class="lead">Maybe You want to start, but dont know where ?? . .  <br>
-Maybe you're worried ,that your voice its not clean or strong enaught ?. .<br>
- Or .  . maybe you think, that you are too old Or a bit too young To start? <br>
-</p>
-  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-<p class=
-   <div class="mr-md-3 pt-3 px-3 pt-md-5"><p class="lead">  </p>
-      <p class>And an even wittier subheading.</p>
+</nav>
+
+<!-----------body header--hero------1--------------------->
+  
+ <section id="container-fluid">
+<img src="assets/images/Everybody's welcome.jpg" alt="fluid">
+ <h1 class="header">classical opera singing classes! <br>
+and piano lessons <br>
+For You!</h1>
+<p class="lead font-weight-normal"> Would You like to Sing like they sing on the Stage?..</p>
+ <span class="d-inline d-sm-none"> I can help you!</span>
     
+  <p class="lead font--normal ">....LOVE . . TRAGEDY ... LAUGHT .. <br>
+All human's passions are represented in Opera.</p>
+<p class="lead"> As well as help students with a preparation for auditions , talent shows ,etc</p>
+               
 
-<div class="bg-light-lux d-md-equiv flex-md-equiv w-100 my-md-3 pl-md-3">
-  <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-white text-center overflow-hidden"><img src="assets/images/Everybody's welcome.jpg" alt="responsive">
-      <h2 class="display-5">Classical Opera
-      Singing Classes<br>
-      and Piano lessons!
- </h2>
-
-<!-------->
-<section id="media">
-
-<div class="carousel slider">
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-	<div class="carousel" role="sliders">
-		<div class="carousel-item active">
-			<img class="d-block w-100" src="MilestoneProject1/assets/images" alt="images">
-
-			<div class="carousel">
-				<img class="d-block w-100" src="../MilestoneProject1/assets/images"  alt="images">
-    </div>
-		</div>
+<p class="lead">  Maybe You want to start, but you dont know where??? . .<br>
+   Maybe you're worried ,that your voice its not clean or strong enaught ?<br>
+ Or . . maybe you think, that you are too old Or a bit too young To start? <br><br>
+Come and have a look on us! <br>
+Opera is <strong> TRULY</strong> for everybody:<br>
+for ladies,gents, teenager, kids, couples....
+</p>
+<div>
+ <h2 class="display-5">As a Vocal pedagogue and  Profesional Opera Singer,
+ I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
+ As well, as 30 years of Profesional Piano Lessons given!</h2>
 </div>
-<!--------iframe media----->
- <div class="embed-responsive centered">
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5z7t1KlSt-c?start=3"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;picture-in-picture" allowfullscreen=""></iframe>
+
+<div class="container card">
+ 
+<div class="card-header">where you can find us!
+  <div class="card-body">
+    <h5 class="card-title">Stromova 22,
+Bratislava 3,Stare mesto,840 01</h5>
+    <p class="card-text">Classical Classes <br>
+Mon/Wed/Fri - from 8am to 9pm</p>
+</div>
+     <div class="card-header-bg-dark">where you can find us!</div>
+  <div class="card-body">
+    <h5 class="card-title">Stromova 22,
+Bratislava 3,Stare mesto,840 01</h5>
+    <p class="card-text">Piano Lessons<br>
+    Tue/Thu/add.Sat - from 9am to 10pm</p>
  </div>
-	</div>
+  </div>
+</div>
+
+<div class="card deck">
+    <div class="card-body">
+      <h4 class="card-title">I would like to start taking classes, but im not sure if my voice is strong enought? (Karolina,39)</h4>
+      <p class="card-text">Generally, I consider four main qualities of a human voice when attempting to classify it: vocal range, tessitura, timbre, and vocal transition points known as passaggio.. I put my focus on physical characteristics, speech level, scientific testing, and other factors such as vocal register.</p>
+    </div>
+   <img class="card-img" src="assets/images/LaTraviata.png" alt="card image">
+</div>
+
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Did you know? </h4>
+      <p class="card-text">People who listened to opera music showed an increase in brain wave activity that's linked directly to memory!. .</p>
+</div>
+
+
+ 
+   <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Is my voice baritone or tenor? (John 57)</h4>
+      <p class="card-text">You could be a baritone capable of singing in the tenor range, or vice versa. Practically speaking, at least in opera, you are a tenor if you can sing tenor roles, including the top notes. Otherwise you are a baritone (or bass)..</p>
+    </div>
+
+<div class="card">
+  <img class="card-img" src="assets/images/2.png" alt="Card image">
+  <div class="card-img-overlay">
+</div>
+
+  <div class="card-dark">
+    <div class="card-body">
+      <h4 class="card-title">Did you know? </h4>
+      <p class="card-text">Scientists claim that classical music's tempo is similar to the human heart, which eases both anxiety and depression!. .</p>
+    </div>
+  </div>
+
+
+
+    <div id="carouselExampleControls container" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+     <div class="carousel-item active">
+ <img class="d-block w-100" src="assets/images/Mery.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/main.bg.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/orchestra-bg-ready.png" alt="Third slide">
+    </div>
+ <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/guisepeW MERY.png" alt="Fourth slide">
+    </div>
+ <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/zbor.png" alt="Fifth slide">
+    </div>
+ <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/P.I.Cajkovskij balet Labutie jazero.jpeg" alt="Sixs slide">
+    </div>
+ <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/LaTraviata.png" alt="Seventh slide">
+  </div>
+  <a class="Carousels-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="Carousels-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+  </div>
+</div>
+
+<section class="iframe justify-center"> 
+<div class="container-fluid-active-embed-responsive">
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5z7t1KlSt-c?start=3"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;picture-in-picture" allowfullscreen="">
+</iframe>
 </div>
 </section>
+
  <!------footer-->
-  <footer class="container">
+ <footer class="container">
+      <div class="row display-center">
       <ul class="list-unstyled">
         <li><a class="https://www.facebook.com" href="#">Facebook</a></li>
         <li><a class="https://www.youtube.com" href="#">YouTube</a></li>
@@ -101,8 +173,10 @@ Maybe you're worried ,that your voice its not clean or strong enaught ?. .<br>
         <li><a class="https://www.rtvs.sk/televizia" href="#">RTVS</a></li>
         <li><a class="https://www.bratislavatickets.com/en" href="#">Bratislava Capital-ticket-portal</a></li>
       </ul>
-
+      </div>
 </footer>
+ 
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
