--- a/index.html
+++ b/index.html
@@ -4,168 +4,160 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/lux/bootstrap.min.css" integrity="sha384-smnSwzHqW1zKbeuSMsAM/fMQpkk7HY11LuHiwT8snL/W2QBoZtVCT4H5x1CEcJCs" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.0/lux/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+                 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-	<link rel="stylesheet" href="MilestoneProject1/assets/image" type="media">
+	<link rel="stylesheet" href="/MilestoneProject1/assets/images" type="media">
 	<title>Classical Classes</title>
 </head>
-<body id="container fluid">
-<nav class="nav-tabs bg-lux justify-content-left">
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-<h1 class="heading-lux"> Classical Classes</h1>
-
-  <button class="navbar-toggler-color-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"  aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-<div class="collapse navbar-collapse" id="navnavbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Gallery</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">FAQ</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-  <input class="form-control mr-sm-2" type="name" placeholder="Name and Surname" aria-label="display-lg-md">
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">SIGN IN HERE!</button>
+<nav class="nav-tabs display-content-top-flex">
+<nav class="navbar navbar-expand-all-viewport navbar-dark bg-dark">
+<h1 class="text-white"> Classical Classes</h1>
+    <form class="form-inline">
+  <input class="form-control" type="name" placeholder="Name and Surname" aria-label="display-lg-md">
+      <button class="btn btn-outline-dark text-white" type="submit">SIGN IN HERE!
+      </button>
     </form>
 </div>
 </nav>
-
-<!-----------body header--hero------1--------------------->
-  
- <section id="container-fluid">
-<img src="assets/images/Everybody's welcome.jpg" alt="fluid">
- <h1 class="header">classical opera singing classes! <br>
+<div class="flex-container content-justify-responsive">
+<div class="justify-content-inline" width="container-sizes"  src="assets/images/Everybody's welcome.jpg" alt="embed-reesponsive">
+<p class="lead font-weight-normal">....LOVE . . TRAGEDY ... LAUGHT .. <br>
+All human's passions are represented in Opera.<br><br>
+Would You like to Sing like they sing on the Stage?<br> I can help you!
+</p>
+<h1 class="display-4 font-weight-normal">classical opera singing classes! <br>
 and piano lessons <br>
 For You!</h1>
-<p class="lead font-weight-normal"> Would You like to Sing like they sing on the Stage?..</p>
- <span class="d-inline d-sm-none"> I can help you!</span>
-    
-  <p class="lead font--normal ">....LOVE . . TRAGEDY ... LAUGHT .. <br>
-All human's passions are represented in Opera.</p>
-<p class="lead"> As well as help students with a preparation for auditions , talent shows ,etc</p>
-               
-
-<p class="lead">  Maybe You want to start, but you dont know where??? . .<br>
-   Maybe you're worried ,that your voice its not clean or strong enaught ?<br>
- Or . . maybe you think, that you are too old Or a bit too young To start? <br><br>
-Come and have a look on us! <br>
-Opera is <strong> TRULY</strong> for everybody:<br>
-for ladies,gents, teenager, kids, couples....
+<p class="lead">AS well as help students with a preparation for auditions , talent shows ,etc
 </p>
-<div>
- <h2 class="display-5">As a Vocal pedagogue and  Profesional Opera Singer,
- I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
- As well, as 30 years of Profesional Piano Lessons given!</h2>
 </div>
-
-<div class="container card">
- 
-<div class="card-header">where you can find us!
-  <div class="card-body">
-    <h5 class="card-title">Stromova 22,
-Bratislava 3,Stare mesto,840 01</h5>
-    <p class="card-text">Classical Classes <br>
-Mon/Wed/Fri - from 8am to 9pm</p>
-</div>
-     <div class="card-header-bg-dark">where you can find us!</div>
-  <div class="card-body">
-    <h5 class="card-title">Stromova 22,
-Bratislava 3,Stare mesto,840 01</h5>
-    <p class="card-text">Piano Lessons<br>
-    Tue/Thu/add.Sat - from 9am to 10pm</p>
+    </div>
+<!------tu je flex equal tu sa br page*))---------------->
+<div class="bg-light flex-container-card">
+ <div class="card-deck">
+<div class="card">
+    <div class="card-body">
+<h4 class="card-title">  Maybe You want to start, but dont know where??? . .<br>
+   Maybe you're worried ,that your voice its not clean or strong enaught ?<br>
+ Or . . maybe you think, that you are too old Or a bit too young To start? </h4>
+ <div class="card-body">
+<h2 class="display-5"> Come and have a look on us!. . <br>
+Opera is <strong> TRULY</strong> for everybody:<br> adults, teenager, kids, couples....</h2>
  </div>
-  </div>
+    </div>
+<h2 class="display-5">As a Vocal pedagogue and  Profesional Opera Singer,
+ I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
+ As well, as 30 years of Profesional Piano Lessons given!</h2> 
 </div>
 
-<div class="card deck">
+<!------------------------------------------3 x3 cards:-------->
+
+<div class="flex-container-card">
+<div class="card-deck">
+<div class="card">
     <div class="card-body">
       <h4 class="card-title">I would like to start taking classes, but im not sure if my voice is strong enought? (Karolina,39)</h4>
       <p class="card-text">Generally, I consider four main qualities of a human voice when attempting to classify it: vocal range, tessitura, timbre, and vocal transition points known as passaggio.. I put my focus on physical characteristics, speech level, scientific testing, and other factors such as vocal register.</p>
     </div>
-   <img class="card-img" src="assets/images/LaTraviata.png" alt="card image">
+<div class="card">
+  <img class="card-img" src="assets/images/guisepeW MERY.png" alt="Card image">
+  <div class="card-img-sizes">
+  </div>
 </div>
-
-  <div class="card">
+<div class="flex-container-card">
     <div class="card-body">
       <h4 class="card-title">Did you know? </h4>
-      <p class="card-text">People who listened to opera music showed an increase in brain wave activity that's linked directly to memory!. .</p>
-</div>
-
-
- 
-   <div class="card">
+      <p class="card-text">People who listened to opera music showed an increase in brain wave activity that's linked directly to memory!</p>
+ </div>
+  </div>
+   <div class="flex-container-card">
     <div class="card-body">
       <h4 class="card-title">Is my voice baritone or tenor? (John 57)</h4>
       <p class="card-text">You could be a baritone capable of singing in the tenor range, or vice versa. Practically speaking, at least in opera, you are a tenor if you can sing tenor roles, including the top notes. Otherwise you are a baritone (or bass)..</p>
     </div>
-
-<div class="card">
-  <img class="card-img" src="assets/images/2.png" alt="Card image">
+   </div>
+<div class="flex-container-card" img class="card-img" src="assets/images/W_A_Mozart_Figaros_1play.png" alt="Card image" max-width=100% height=100%>
   <div class="card-img-overlay">
+  </div>
 </div>
-
-  <div class="card-dark">
+<div class="flex-container-card">
     <div class="card-body">
       <h4 class="card-title">Did you know? </h4>
       <p class="card-text">Scientists claim that classical music's tempo is similar to the human heart, which eases both anxiety and depression!. .</p>
     </div>
   </div>
-
-
-
-    <div id="carouselExampleControls container" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
+</div>
+<!-----------divs eqal splited and this specific div Could be Carousel--
+ im vopchat carousel dnu jedneho ano- ty bukicka levakova  nie dvoch ale jedneho--- )-----------img copy from gith-------------------->
+ <div class="flex-container-slide">
+ <div class="carousel-display-content-bootswatch">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner max-width:100% max-height:100%">
      <div class="carousel-item active">
- <img class="d-block w-100" src="assets/images/Mery.png" alt="First slide">
+      <img class="mw-10" src="assets/images/zbor.png" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/main.bg.png" alt="Second slide">
+      <img class="mw-10" src="assets/images/HERO2.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/orchestra-bg-ready.png" alt="Third slide">
+      <img class="mw-10" src="assets/images/Mery.png" alt="Third slide">
     </div>
  <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/guisepeW MERY.png" alt="Fourth slide">
+      <img class="mw-10" src="assets/images/jazero.jpeg" alt="Fourth slide">
     </div>
  <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/zbor.png" alt="Fifth slide">
+      <img class="mw-10"  src="assets/images/orchestra-bg-ready.png" alt="Fifth slide">
     </div>
  <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/P.I.Cajkovskij balet Labutie jazero.jpeg" alt="Sixs slide">
+      <img class="mw-10"  src="/assets/images/xmass inv.jpg" alt="Sixs slide">
     </div>
  <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/LaTraviata.png" alt="Seventh slide">
+      <img class="mw-10"  src="assets/images/2.png" alt="Seventh slide">
+    </div>
   </div>
-  <a class="Carousels-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="Carousels-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
-  </div>
+ </div>
 </div>
-
-<section class="iframe justify-center"> 
-<div class="container-fluid-active-embed-responsive">
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5z7t1KlSt-c?start=3"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;picture-in-picture" allowfullscreen="">
+<!------card div(s)--shold be all good for all screen sizes :)------ <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">---------------------------------------------->
+<div class="flex-container display-content-justify">
+<div class="card text-white bg-dark" style="max-width:100% max-height:50%">
+  <div class="card-header">where you can find us!</div>
+  <div class="card-body">
+    <h5 class="card-title">Stromova 22,
+Bratislava 3,Stare mesto,840 01</h5>
+    <p class="card-text">Classical Classes <br>
+Mon/Wed/Fri - from 8am to 9pm</p>
+  </div>
+  <div class="card-header">where you can find us!</div>
+  <div class="card-body">
+    <h5 class="card-title">Stromova 22,
+Bratislava 3,Stare mesto,840 01</h5>
+    <p class="card-text">Piano Lessons<br>
+    Tue/Thu/add.Sat - from 9am to 10pm</p>
+  </div>
+  </div>
+</div>   
+</div>
+<div class="flex-iframe-container">
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/5z7t1KlSt-c?start=3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
 </iframe>
 </div>
-</section>
-
+</div>
  <!------footer-->
- <footer class="container">
-      <div class="row display-center">
+  <footer class="flex-container">
+ <div class="embed-reesponsive bg-light shadow-dark text-centered">
       <ul class="list-unstyled">
         <li><a class="https://www.facebook.com" href="#">Facebook</a></li>
         <li><a class="https://www.youtube.com" href="#">YouTube</a></li>
@@ -173,10 +165,9 @@ Bratislava 3,Stare mesto,840 01</h5>
         <li><a class="https://www.rtvs.sk/televizia" href="#">RTVS</a></li>
         <li><a class="https://www.bratislavatickets.com/en" href="#">Bratislava Capital-ticket-portal</a></li>
       </ul>
-      </div>
+ </div>
 </footer>
- 
-
+<!-------jquery------------------------------------------------------->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
