--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
                  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-	<link rel="stylesheet" href="/MilestoneProject1/assets/images" type="media">
+	<link rel="stylesheet" href="../assets/images" type="img">
 	<title>Classical Classes</title>
 </head>
+<body>
 <nav class="nav-tabs display-content-top-flex">
 <nav class="navbar navbar-expand-all-viewport navbar-dark bg-dark">
 <h1 class="text-white"> Classical Classes</h1>
@@ -19,22 +20,87 @@
       <button class="btn btn-outline-dark text-white" type="submit">SIGN IN HERE!
       </button>
     </form>
-</div>
 </nav>
-<div class="flex-container content-justify-responsive">
-<div class="justify-content-inline" width="container-sizes"  src="assets/images/Everybody's welcome.jpg" alt="embed-reesponsive">
-<p class="lead font-weight-normal">....LOVE . . TRAGEDY ... LAUGHT .. <br>
-All human's passions are represented in Opera.<br><br>
-Would You like to Sing like they sing on the Stage?<br> I can help you!
-</p>
-<h1 class="display-4 font-weight-normal">classical opera singing classes! <br>
-and piano lessons <br>
-For You!</h1>
-<p class="lead">AS well as help students with a preparation for auditions , talent shows ,etc
-</p>
+</nav>
+
+<!-- Jumbotron -->
+<div class="card card-image" style="background-image:url(assets/images/Everybody's welcome.jpg)">
+  <div class="text-dark text-center rgba-stylish-strong py-5 px-4">
+    <div class="py-5">
+      <!-- Content -->
+      <h5 class="h5 dark-text">....LOVE . . TRAGEDY ... LAUGHT ..<br>
+      All human's passions are represented in Opera</h5>
+      <h2 class="card-title h2 my-4 py-2">Classical Opera Singing Classes! <br>
+For You!</h2>
+      <p class="mb-4 pb-2 px-md-5 mx-md-5">Maybe You want to start, but you dont know where???<br>
+   Maybe you're worried ,that your voice its not clean or strong enaught ?<br>
+ Or . . maybe you think, that you are too old Or a bit too young To start? </p>
+      <a class="btn grey-gradient"> Come and have a look on us! </a>
 </div>
+  </div>
+</div>
+<!-- Jumbotron -->
+
+<div class="card card-image" style="background-image: url(assets/images/main.bg.png)">
+<div class="text-light text-centered rgba-stylish-strong py-5 px-4">
+    <div class="py-5">
+ <!-- Content -->
+      <h5 class="h5 light-text">Would You like to Sing like they sing on the Stage?</h5>
+      <h2 class="card-title h2 my-4 py-2"> I can help You!</h2>
+      <p class="mb-4 pb-2 px-md-5 mx-md-5">As a Vocal pedagogue and  Profesional Opera Singer, I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
+ As well, as 30 years of Profesional Piano Lessons given!</p>
+      <a class="btn grey-gradient">Opera is <strong> TRULY</strong> for everybody</a>
+</div>
+  </div>
+</div>
+
+   
+<div class="card card-image" style="background-image: url(assets/images/notes3.jpg)">
+  <div class="text-dark text-center rgba-stylish-strong py-5 px-4">
+    <div class="py-5">
+
+      <!-- Content *--**-->
+      <h5 class="h5 dark-text">Did you know?</h5>
+      <h2 class="card-title h2 my-4 py-2">People who listened to opera music showed an increase in brain wave activity that's linked directly to memory</h2>
+      <p class="mb-4 pb-2 px-md-5 mx-md-5 text-size-lead"><strong> Scientists claim that classical music's tempo is similar to the human heart, which eases both anxiety and depression!.</strong></p>
     </div>
-<!------tu je flex equal tu sa br page*))---------------->
+  </div>
+</div>
+-------------------->
+<!----  -----What are the Main types of Female and Male voices?":
+
+	Female voices
+	Soprano
+	Mezzo-soprano
+	Contralto
+
+	Male voices
+	Countertenor
+	Tenor
+	Baritone
+	Bass
+
+	Children's voices
+	The voice from childhood to adulthood
+	Treble
+
+[[
+Females: 
+The soprano:The soprano is the highest singing voice. The typical soprano voice lies between C4 (middle C) and C6 (high C).
+
+Mezzo-soprano:The mezzo-soprano voice is the middle-range voice type for females. It lies between the soprano and contralto ranges, over-lapping both of them. The typical range of this voice is between A3 (the A below middle C) to A5 (two octaves higher). 
+
+Contralto:The contralto voice is the lowest female voice. A  The typical contralto range lies between F3 (the F below middle C) to F5 (the second F above middle C). 
+
+Males:
+Tenor: The tenor is the highest male voice within the modal register.
+Tenor voice range (C3–C5) indicated on piano keyboard in green with dot marking middle C (C4). The typical tenor voice lies between C3 (one octave below middle C) to C5 (one octave above middle C). 
+
+Baritone: The baritone voice is the middle-range voice type for males; it lies between the bass and tenor ranges, overlapping both of them.
+Baritone voice range (A2–A4) indicated on piano keyboard in green with dot marking middle C (C4). Baritone comes from the Italian baritono, with its Greek root word barytonos, "deep-voiced," combining barys, "heavy or deep" and tonos, "tone.
+
+Bass :The bass is the lowest singing voice. The bass voice has the lowest tessitura of all the voices. The typical bass range lies between (E2–E4) indicated on piano keyboard in green with dot marking middle C.
+-----------  >
 <div class="bg-light flex-container-card">
  <div class="card-deck">
 <div class="card">
@@ -52,7 +118,27 @@ Opera is <strong> TRULY</strong> for everybody:<br> adults, teenager, kids, coup
  As well, as 30 years of Profesional Piano Lessons given!</h2> 
 </div>
 
-<!------------------------------------------3 x3 cards:-------->
+<!-Jumbotron -->
+<div class="card card-image" style="background-image: url(main.bg.png);">
+  <div class="text-white text-center rgba-stylish-strong py-5 px-4">
+    <div class="py-5">
+
+      <!-- Content -->
+      <h5 class="h5 orange-text"> Photography</h5>
+      <h2 class="card-title h2 my-4 py-2">Jumbotron with image overlay</h2>
+      <p class="mb-4 pb-2 px-md-5 mx-md-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur obcaecati vero aliquid libero doloribus ad, unde tempora maiores, ullam, modi qui quidem minima debitis perferendis vitae cumque et quo impedit.</p>
+      <a class="btn peach-gradient"><i class="fas fa-clone left"></i> View project</a>
+
+    </div>
+  </div>
+</div>
+<!-- Jumbotron -->
+
+
+
+
+
+<!------------------------------------------3 x3 cards:-------  ->
 
 <div class="flex-container-card">
 <div class="card-deck">
@@ -78,6 +164,7 @@ Opera is <strong> TRULY</strong> for everybody:<br> adults, teenager, kids, coup
       <p class="card-text">You could be a baritone capable of singing in the tenor range, or vice versa. Practically speaking, at least in opera, you are a tenor if you can sing tenor roles, including the top notes. Otherwise you are a baritone (or bass)..</p>
     </div>
    </div>
+   <!---------------------------------------  >
 <div class="flex-container-card" img class="card-img" src="assets/images/W_A_Mozart_Figaros_1play.png" alt="Card image" max-width=100% height=100%>
   <div class="card-img-overlay">
   </div>
@@ -91,9 +178,12 @@ Opera is <strong> TRULY</strong> for everybody:<br> adults, teenager, kids, coup
 </div>
 <!-----------divs eqal splited and this specific div Could be Carousel--
  im vopchat carousel dnu jedneho ano- ty bukicka levakova  nie dvoch ale jedneho--- )-----------img copy from gith-------------------->
- <div class="flex-container-slide">
- <div class="carousel-display-content-bootswatch">
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+
+ <div class="carousel-container-slide">
+<div class="card card-slide content-center" >
+  <div class="rgba-stylish-strong py-5 px-4">
+    <div class="py-5 carousel slide" data-ride="carousel">
+<div id="carouselExampleControls">
   <div class="carousel-inner max-width:100% max-height:100%">
      <div class="carousel-item active">
       <img class="mw-10" src="assets/images/zbor.png" alt="First slide">
@@ -126,12 +216,15 @@ Opera is <strong> TRULY</strong> for everybody:<br> adults, teenager, kids, coup
     <span class="sr-only">Next</span>
   </a>
 </div>
- </div>
+    </div>
+  </div>
 </div>
+
+
 <!------card div(s)--shold be all good for all screen sizes :)------ <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">---------------------------------------------->
-<div class="flex-container display-content-justify">
-<div class="card text-white bg-dark" style="max-width:100% max-height:50%">
+<div class="flex-container">
+<div class="card text-white bg-dark" style="max-width:100%" >
   <div class="card-header">where you can find us!</div>
   <div class="card-body">
     <h5 class="card-title">Stromova 22,
@@ -149,6 +242,8 @@ Bratislava 3,Stare mesto,840 01</h5>
   </div>
 </div>   
 </div>
+
+
 <div class="flex-iframe-container">
 <div class="embed-responsive embed-responsive-16by9">
 <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/5z7t1KlSt-c?start=3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
