--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
                  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-	<link rel="stylesheet" href="../assets/images" type="img">
+	<link rel="stylesheet" href="../assets/images" type="image">
 	<title>Classical Classes</title>
 </head>
 <body>
@@ -22,177 +22,83 @@
     </form>
 </nav>
 </nav>
-
-<!-- Jumbotron -->
-<div class="card card-image" style="background-image:url(assets/images/Everybody's welcome.jpg)">
+<div class="card card-image" >
+<img src="assets/images/EverybodyWelcome.png" class="img-fluid" alt="">
   <div class="text-dark text-center rgba-stylish-strong py-5 px-4">
-    <div class="py-5">
-      <!-- Content -->
-      <h5 class="h5 dark-text">....LOVE . . TRAGEDY ... LAUGHT ..<br>
-      All human's passions are represented in Opera</h5>
-      <h2 class="card-title h2 my-4 py-2">Classical Opera Singing Classes! <br>
-For You!</h2>
-      <p class="mb-4 pb-2 px-md-5 mx-md-5">Maybe You want to start, but you dont know where???<br>
+    <div class="py-5"> 
+       <h1 class="font-weight-bold text-dark card-title h1 my-4 py-2">Classical Opera Singing Classes<br> 
+For You!</h1> 
+</div>
+  </div>
+</div>
+   <div class="py-5"> 
+  <div class="card card-image ">
+    <h3 class="card-title h3 my-4"><strong> Come and have a look on us!</strong></h3>
+    <!-- Text -->
+    <p class="card-text font-weight-bold py-2">Maybe You want to start, but you dont know where?<br>
    Maybe you're worried ,that your voice its not clean or strong enaught ?<br>
- Or . . maybe you think, that you are too old Or a bit too young To start? </p>
-      <a class="btn grey-gradient"> Come and have a look on us! </a>
+ Or . . maybe you think, that you are too old Or a bit too young To start?</p>
+ <img class= "background-image: url(assets/images/EverybodyWelcome.png)"> 
+   <h3 class="card-title font-weight-bold text-center h3 my-4"> Would You like to Sing like they sing on the Stage?<br>
+    I can help You!</h3>
+      <h3 class="card-text font-weight-bold text-center h3 my-4"><strong>As a Vocal pedagogue and Profesional Opera singer, I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
+ As well, as 30 years of Profesional Piano Lessons given!</strong></h3>
+      <p class="font-weight-bold">Opera is<strong> TRULY</strong> for everybody</p>
+</div> 
+<div class="card card-image">
+<div class="mask rgba-light(white)-image-fluid">
+     <h3 class="h3 dark-text">My YouTube video</h3>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5z7t1KlSt-c? start=3"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;picture-in-picture" allowfullscreen="">
+</iframe>
 </div>
-  </div>
-</div>
-<!-- Jumbotron -->
-
-<div class="card card-image" style="background-image: url(assets/images/main.bg.png)">
-<div class="text-light text-centered rgba-stylish-strong py-5 px-4">
-    <div class="py-5">
- <!-- Content -->
-      <h5 class="h5 light-text">Would You like to Sing like they sing on the Stage?</h5>
-      <h2 class="card-title h2 my-4 py-2"> I can help You!</h2>
-      <p class="mb-4 pb-2 px-md-5 mx-md-5">As a Vocal pedagogue and  Profesional Opera Singer, I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
- As well, as 30 years of Profesional Piano Lessons given!</p>
-      <a class="btn grey-gradient">Opera is <strong> TRULY</strong> for everybody</a>
-</div>
-  </div>
-</div>
-
-   
-<div class="card card-image" style="background-image: url(assets/images/notes3.jpg)">
+ <div class="card card-image" >
+  <div class="text-dark text-center rgba-stylish-strong py-5 px-4">
+   <img class= "background-image: url(assets/images/EverybodyWelcome.png)">
+   <h3 class="h3 dark-text">what others says</h3>
+  <div class="mask rgba-light(white)-image-fluid">
+ <div class="text-dark text-center py-5 px-4">
+ <p class="mb-4 pb-2 px-md-5 mx-md-5 text-size-lead">
+   "People who listened to opera music showed an increase in brain wave activity that's linked directly to memory".</p>
+      <p class="mb-4 pb-2 px-md-5 mx-md-5 text-size-lead"> "Scientists claim that classical music's tempo is similar to the human heart, which eases both anxiety and depression!"</p>
+    </div>
+      <p class="mb-4 pb-2 px-md-5 mx-md-5 text-size-lead"><strong>"I would like to start taking classes, but im not sure if my voice is strong enought?"(Karolina,39)</strong></p>
+      <p class="mb-4 pb-2 px-md-5 mx-md-5 text-size-lead">Generally, I consider four main qualities of a human voice when attempting to classify it: vocal range, tessitura, timbre, and vocal transition points known as passaggio.. I put my focus on physical characteristics, speech level, scientific testing, and other factors such as vocal register.</p><br>
+      <p class="mb-4 pb-2 px-md-5 mx-md-5 text-size-lead"><strong>"Is my voice baritone or tenor?" (John 57)</strong></p>
+     <p class="mb-4 pb-2 px-md-5 mx-md-5 text-size-lead">You could be a baritone capable of singing in the tenor range, or vice versa. Practically speaking, at least in opera, you are a tenor if you can sing tenor roles, including the top notes. Otherwise you are a baritone.
+      </p>
   <div class="text-dark text-center rgba-stylish-strong py-5 px-4">
     <div class="py-5">
-
-      <!-- Content *--**-->
-      <h5 class="h5 dark-text">Did you know?</h5>
-      <h2 class="card-title h2 my-4 py-2">People who listened to opera music showed an increase in brain wave activity that's linked directly to memory</h2>
-      <p class="mb-4 pb-2 px-md-5 mx-md-5 text-size-lead"><strong> Scientists claim that classical music's tempo is similar to the human heart, which eases both anxiety and depression!.</strong></p>
-    </div>
-  </div>
-</div>
--------------------->
-<!----  -----What are the Main types of Female and Male voices?":
-
-	Female voices
-	Soprano
-	Mezzo-soprano
-	Contralto
-
-	Male voices
-	Countertenor
-	Tenor
-	Baritone
-	Bass
-
-	Children's voices
-	The voice from childhood to adulthood
-	Treble
-
-[[
-Females: 
-The soprano:The soprano is the highest singing voice. The typical soprano voice lies between C4 (middle C) and C6 (high C).
-
-Mezzo-soprano:The mezzo-soprano voice is the middle-range voice type for females. It lies between the soprano and contralto ranges, over-lapping both of them. The typical range of this voice is between A3 (the A below middle C) to A5 (two octaves higher). 
-
-Contralto:The contralto voice is the lowest female voice. A  The typical contralto range lies between F3 (the F below middle C) to F5 (the second F above middle C). 
-
-Males:
+      <h3 class="h3 dark-text">What are the Main types of Female and Male voices?</h3>
+     <ul class="list-group mx-5 mb-5"><strong>Females: </strong>
+  <li class="list-group-item">The soprano:The soprano is the highest singing voice. The typical soprano voice lies between C4 (middle C) and C6 (high C).</li>
+  <li class="list-group-item">Mezzo-soprano:The mezzo-soprano voice is the middle-range voice type for females. It lies between the soprano and contralto ranges, over-lapping both of them. The typical range of this voice is between A3 (the A below middle C) to A5 (two octaves higher). </li>
+  <li class="list-group-item">Contralto:The contralto voice is the lowest female voice. A  The typical contralto range lies between F3 (the F below middle C) to F5 (the second F above middle C).
+</li>
+  <ul class="list-group mx-5 mb-5"><strong>Males: </strong>
+<li class="list-group-item">
 Tenor: The tenor is the highest male voice within the modal register.
-Tenor voice range (C3–C5) indicated on piano keyboard in green with dot marking middle C (C4). The typical tenor voice lies between C3 (one octave below middle C) to C5 (one octave above middle C). 
-
+Tenor voice range (C3–C5) indicated on piano keyboard in green with dot marking middle C (C4). The typical tenor voice lies between C3 (one octave below middle C) to C5 (one octave above middle C). </li>
+<li class="list-group-item">
 Baritone: The baritone voice is the middle-range voice type for males; it lies between the bass and tenor ranges, overlapping both of them.
-Baritone voice range (A2–A4) indicated on piano keyboard in green with dot marking middle C (C4). Baritone comes from the Italian baritono, with its Greek root word barytonos, "deep-voiced," combining barys, "heavy or deep" and tonos, "tone.
-
+Baritone voice range (A2–A4) indicated on piano keyboard in green with dot marking middle C (C4). Baritone comes from the Italian baritono, with its Greek root word barytonos, "deep-voiced," combining barys, "heavy or deep" and tonos, "tone.</li>
+<li class="list-group-item">
 Bass :The bass is the lowest singing voice. The bass voice has the lowest tessitura of all the voices. The typical bass range lies between (E2–E4) indicated on piano keyboard in green with dot marking middle C.
------------  >
-<div class="bg-light flex-container-card">
- <div class="card-deck">
-<div class="card">
-    <div class="card-body">
-<h4 class="card-title">  Maybe You want to start, but dont know where??? . .<br>
-   Maybe you're worried ,that your voice its not clean or strong enaught ?<br>
- Or . . maybe you think, that you are too old Or a bit too young To start? </h4>
- <div class="card-body">
-<h2 class="display-5"> Come and have a look on us!. . <br>
-Opera is <strong> TRULY</strong> for everybody:<br> adults, teenager, kids, couples....</h2>
- </div>
-    </div>
-<h2 class="display-5">As a Vocal pedagogue and  Profesional Opera Singer,
- I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
- As well, as 30 years of Profesional Piano Lessons given!</h2> 
-</div>
-
-<!-Jumbotron -->
-<div class="card card-image" style="background-image: url(main.bg.png);">
-  <div class="text-white text-center rgba-stylish-strong py-5 px-4">
-    <div class="py-5">
-
-      <!-- Content -->
-      <h5 class="h5 orange-text"> Photography</h5>
-      <h2 class="card-title h2 my-4 py-2">Jumbotron with image overlay</h2>
-      <p class="mb-4 pb-2 px-md-5 mx-md-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur obcaecati vero aliquid libero doloribus ad, unde tempora maiores, ullam, modi qui quidem minima debitis perferendis vitae cumque et quo impedit.</p>
-      <a class="btn peach-gradient"><i class="fas fa-clone left"></i> View project</a>
-
+</li>
+</ul>
+     </ul>
     </div>
   </div>
-</div>
-<!-- Jumbotron -->
-
-
-
-
-
-<!------------------------------------------3 x3 cards:-------  ->
-
-<div class="flex-container-card">
-<div class="card-deck">
-<div class="card">
-    <div class="card-body">
-      <h4 class="card-title">I would like to start taking classes, but im not sure if my voice is strong enought? (Karolina,39)</h4>
-      <p class="card-text">Generally, I consider four main qualities of a human voice when attempting to classify it: vocal range, tessitura, timbre, and vocal transition points known as passaggio.. I put my focus on physical characteristics, speech level, scientific testing, and other factors such as vocal register.</p>
-    </div>
-<div class="card">
-  <img class="card-img" src="assets/images/guisepeW MERY.png" alt="Card image">
-  <div class="card-img-sizes">
-  </div>
-</div>
-<div class="flex-container-card">
-    <div class="card-body">
-      <h4 class="card-title">Did you know? </h4>
-      <p class="card-text">People who listened to opera music showed an increase in brain wave activity that's linked directly to memory!</p>
- </div>
-  </div>
-   <div class="flex-container-card">
-    <div class="card-body">
-      <h4 class="card-title">Is my voice baritone or tenor? (John 57)</h4>
-      <p class="card-text">You could be a baritone capable of singing in the tenor range, or vice versa. Practically speaking, at least in opera, you are a tenor if you can sing tenor roles, including the top notes. Otherwise you are a baritone (or bass)..</p>
-    </div>
-   </div>
-   <!---------------------------------------  >
-<div class="flex-container-card" img class="card-img" src="assets/images/W_A_Mozart_Figaros_1play.png" alt="Card image" max-width=100% height=100%>
-  <div class="card-img-overlay">
-  </div>
-</div>
-<div class="flex-container-card">
-    <div class="card-body">
-      <h4 class="card-title">Did you know? </h4>
-      <p class="card-text">Scientists claim that classical music's tempo is similar to the human heart, which eases both anxiety and depression!. .</p>
-    </div>
-  </div>
-</div>
-<!-----------divs eqal splited and this specific div Could be Carousel--
- im vopchat carousel dnu jedneho ano- ty bukicka levakova  nie dvoch ale jedneho--- )-----------img copy from gith-------------------->
-
- <div class="carousel-container-slide">
-<div class="card card-slide content-center" >
-  <div class="rgba-stylish-strong py-5 px-4">
-    <div class="py-5 carousel slide" data-ride="carousel">
-<div id="carouselExampleControls">
-  <div class="carousel-inner max-width:100% max-height:100%">
+   <div class="card card-image" ><h4 class="text-bold h4 mb-4">Photos</h4>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
      <div class="carousel-item active">
       <img class="mw-10" src="assets/images/zbor.png" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="mw-10" src="assets/images/HERO2.jpg" alt="Second slide">
+      <img class="mw-10" src="assets/images/main.bg.png" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="mw-10" src="assets/images/Mery.png" alt="Third slide">
+      <img class="mw-10" src="assets/images/guisepeW MERY.png" alt="Third slide">
     </div>
  <div class="carousel-item">
       <img class="mw-10" src="assets/images/jazero.jpeg" alt="Fourth slide">
@@ -201,10 +107,10 @@ Opera is <strong> TRULY</strong> for everybody:<br> adults, teenager, kids, coup
       <img class="mw-10"  src="assets/images/orchestra-bg-ready.png" alt="Fifth slide">
     </div>
  <div class="carousel-item">
-      <img class="mw-10"  src="/assets/images/xmass inv.jpg" alt="Sixs slide">
+      <img class="mw-10"  src="assets/images/LaTraviata.png" alt="Sixth slide">
     </div>
  <div class="carousel-item">
-      <img class="mw-10"  src="assets/images/2.png" alt="Seventh slide">
+      <img class="mw-10"  src="assets/images/Mery.png" alt="Seventh slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -215,52 +121,29 @@ Opera is <strong> TRULY</strong> for everybody:<br> adults, teenager, kids, coup
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
-    </div>
-  </div>
-</div>
-
-
-<!------card div(s)--shold be all good for all screen sizes :)------ <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">---------------------------------------------->
-<div class="flex-container">
-<div class="card text-white bg-dark" style="max-width:100%" >
-  <div class="card-header">where you can find us!</div>
-  <div class="card-body">
-    <h5 class="card-title">Stromova 22,
-Bratislava 3,Stare mesto,840 01</h5>
-    <p class="card-text">Classical Classes <br>
-Mon/Wed/Fri - from 8am to 9pm</p>
-  </div>
-  <div class="card-header">where you can find us!</div>
-  <div class="card-body">
-    <h5 class="card-title">Stromova 22,
-Bratislava 3,Stare mesto,840 01</h5>
-    <p class="card-text">Piano Lessons<br>
-    Tue/Thu/add.Sat - from 9am to 10pm</p>
-  </div>
-  </div>
-</div>   
-</div>
-
-
-<div class="flex-iframe-container">
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/5z7t1KlSt-c?start=3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
-</iframe>
-</div>
-</div>
- <!------footer-->
-  <footer class="flex-container">
- <div class="embed-reesponsive bg-light shadow-dark text-centered">
-      <ul class="list-unstyled">
-        <li><a class="https://www.facebook.com" href="#">Facebook</a></li>
-        <li><a class="https://www.youtube.com" href="#">YouTube</a></li>
-        <li><a class="https://www.snd.sk/en" href="#">Slovak National Theater</a></li>
-        <li><a class="https://www.rtvs.sk/televizia" href="#">RTVS</a></li>
-        <li><a class="https://www.bratislavatickets.com/en" href="#">Bratislava Capital-ticket-portal</a></li>
+<div class="jumbotron text-center mask rgba-white-slight">
+  <h4 class="card-title h4 pb-2"><strong>where you can find us</strong></h4>
+  <div class="view overlay my-4">
+    <img src="assets/images/xmass inv.jpg" class="img-fluid" alt="">
+<h4 class="text-bold h4 mb-4">address</h4><br>
+<p class="card-text-bold">Stromova 22,<br>
+Bratislava 3,Stare mesto,840 01</p>
+  <p class="card-text-bold"><strong> Piano Lessons</strong> :Tue/Thu/add.Sat - from 9am to 10pm</p>
+  <p class="card-text-bold"><strong> Classical Classes</strong> : Mon/Wed/Fri - from 8am to 9pm</p>
+   </div>
+   <p class="card-text-bold"><strong> email:</strong> opera.maria.borb@gmail.com</p>
+   <p class="card-text-bold"><strong> mobile:</strong> mob: +421335789556 </p>
+</div></div>
+<footer>
+<div class="list-style-bold">
+<ul class="list-unstyled">
+        <li><a class p-2 m-2 li-ic="https://www.facebook.com" href="#">Facebook</a></li>
+        <li><a class p-2 m-2 li-ic="https://www.youtube.com" href="#">YouTube</a></li>
+        <li><a class p-2 m-2 li-ic="https://www.snd.sk/en" href="#">Slovak National Theater</a></li>
+        <li><a class p-2 m-2 li-ic="https://www.rtvs.sk/televizia" href="#">RTVS</a></li>
+        <li><a class p-2 m-2 li-ic="https://www.bratislavatickets.com/en" href="#">Bratislava Capital-ticket-portal</a></li>
       </ul>
- </div>
+</div>
 </footer>
 <!-------jquery------------------------------------------------------->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
